# ai-loom

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.codex/prompts/: release.md
.github/workflows/: release-npm.yml
docs/: frontend-architecture.md
docs/guide/: README.md  annotation-jump.md  annotations-ssot.md  api.md  architecture.md  cli.md  data-model.md  frontend.md  fs-and-limits.md  security.md  stitching.md  storage.md
scripts/: bump-npm-version.mjs  check-npm-versions.mjs  cleanup-dev.sh  dev-all.sh  npm-bump-auto.sh  npm-first-publish-local.sh  npm-release-start.sh
templates/vibe-kanban/: .gitignore  CLAUDE.md  Cargo.toml  PUBLISH.md  README.md  local-build.sh  package.json  publish.sh
templates/vibe-kanban/.github/workflows/: test.yml
templates/vibe-kanban/crates/db/: Cargo.toml
templates/vibe-kanban/crates/db/migrations/: 001_initial_migration.sql
templates/vibe-kanban/crates/db/src/: lib.rs
templates/vibe-kanban/crates/db/src/models/: entity.rs
templates/vibe-kanban/crates/generate_types/: Cargo.toml
templates/vibe-kanban/crates/generate_types/src/: main.rs
templates/vibe-kanban/crates/local-deployment/: Cargo.toml
templates/vibe-kanban/crates/local-deployment/src/: lib.rs
templates/vibe-kanban/crates/server/: Cargo.toml
templates/vibe-kanban/crates/server/src/: main.rs
templates/vibe-kanban/crates/server/src/routes/: api.rs  health.rs  mod.rs
templates/vibe-kanban/crates/services/: Cargo.toml
templates/vibe-kanban/crates/services/src/: entity_service.rs  lib.rs
templates/vibe-kanban/crates/utils/: Cargo.toml
templates/vibe-kanban/crates/utils/src/: lib.rs
templates/vibe-kanban/frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
templates/vibe-kanban/frontend/src/: App.tsx  index.css
templates/vibe-kanban/frontend/src/components/: theme-provider.tsx
templates/vibe-kanban/frontend/src/contexts/: config-context.tsx
templates/vibe-kanban/frontend/src/pages/: home-page.tsx  settings-page.tsx
templates/vibe-kanban/npx-cli/: package.json
templates/vibe-kanban/shared/: types.ts
(+12 files in other folders)
