[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/db", 
    "crates/services",
    "crates/utils",
    "crates/local-deployment",
    "crates/generate_types"
]

[workspace.dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TypeScript generation
ts-rs = "11.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
open = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Development only
cargo-watch = "8.0"